@@ -446,13 +446,13 @@ INSERT INTO items VALUES (10202,0,'','',161,10003,'MySQL number of threads','mys
 INSERT INTO items VALUES (10203,0,'','',161,10003,'MySQL queries per second','mysql[qps]',60,7,365,0,NULL,NULL,NULL,0,0,'','qps',0,0,NULL,'',0,'','','0','',0,'',0,0,'','');
 INSERT INTO items VALUES (10204,0,'','',161,10003,'MySQL number of slow queries','mysql[slowqueries]',60,7,365,0,NULL,NULL,NULL,0,3,'','',0,0,NULL,'',0,'','','0','',0,'',0,0,'','');
 INSERT INTO items VALUES (10205,0,'','',161,10003,'MySQL version','version[mysql]',600,7,365,0,NULL,NULL,NULL,0,1,'','',0,0,NULL,'',0,'','','0','',0,'',0,0,'','');
-INSERT INTO items VALUES (10298,3,'','',161,10004,'Email (SMTP) server is running','smtp',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
-INSERT INTO items VALUES (10299,3,'','',161,10004,'FTP server is running','ftp',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
-INSERT INTO items VALUES (10300,3,'','',161,10004,'SSH server is running','ssh',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
-INSERT INTO items VALUES (10303,3,'','',161,10004,'POP3 server is running','pop',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
-INSERT INTO items VALUES (10304,3,'','',161,10004,'IMAP server is running','imap',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
-INSERT INTO items VALUES (10313,3,'','',161,10004,'News (NNTP) server is running','nntp',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
-INSERT INTO items VALUES (10327,3,'','',161,10004,'WEB (HTTP) server is running','http',60,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
+INSERT INTO items VALUES (10298,3,'','',161,10004,'Email (SMTP) server is running','smtp',60,7,365,0,NULL,NULL,NULL,0,3,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
+INSERT INTO items VALUES (10299,3,'','',161,10004,'FTP server is running','ftp',60,7,365,0,NULL,NULL,NULL,0,3,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
+INSERT INTO items VALUES (10300,3,'','',161,10004,'SSH server is running','ssh',60,7,365,0,NULL,NULL,NULL,0,3,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
+INSERT INTO items VALUES (10303,3,'','',161,10004,'POP3 server is running','pop',60,7,365,0,NULL,NULL,NULL,0,3,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
+INSERT INTO items VALUES (10304,3,'','',161,10004,'IMAP server is running','imap',60,7,365,0,NULL,NULL,NULL,0,3,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
+INSERT INTO items VALUES (10313,3,'','',161,10004,'News (NNTP) server is running','nntp',60,7,365,0,NULL,NULL,NULL,0,3,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
+INSERT INTO items VALUES (10327,3,'','',161,10004,'WEB (HTTP) server is running','http',60,7,365,0,NULL,NULL,NULL,0,3,'','',0,0,NULL,'',0,'','','0','',0,'',0,1,'','');
 INSERT INTO items VALUES (10357,0,'','',161,10002,'Checksum of $1','vfs.file.cksum[c:\\config.sys]',600,7,365,0,NULL,NULL,NULL,0,0,'','',0,0,NULL,'',0,'','','0','',0,'',0,0,'','');
 INSERT INTO items VALUES (10358,0,'','',161,10002,'Free disk space on $1','vfs.fs.size[d:,free]',30,7,365,0,NULL,NULL,NULL,0,3,'','B',1,0,NULL,'',0,'','','1','',0,'',0,0,'','');
 INSERT INTO items VALUES (10359,0,'','',161,10002,'Total disk space on $1','vfs.fs.size[d:,total]',3600,7,365,0,NULL,NULL,NULL,0,3,'','B',0,0,NULL,'',0,'','','0','',0,'',0,0,'','');
