@@ -463,7 +463,7 @@ FIELD		|error		|t_varchar(128)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|lastlogsize	|t_integer	|'0'	|NOT NULL	|0
 FIELD		|logtimefmt	|t_varchar(64)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|templateid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
-FIELD		|valuemapid	|t_bigint		|'0'	|NOT NULL	|ZBX_SYNC
+FIELD		|valuemapid	|t_id		|'0'	|NOT NULL	|ZBX_SYNC
 FIELD		|delay_flex	|t_varchar(255)	|''	|NOT NULL	|ZBX_SYNC
 FIELD		|params		|t_item_param	|''	|NOT NULL	|ZBX_SYNC
 UNIQUE		|1		|hostid,key_
